--- a/пояснительная записка/preamble.tex
+++ b/пояснительная записка/preamble.tex
@@ -35,13 +35,14 @@ url=false %все false выключают отображение полей, з
     }
   }
 }
-\end{comment}
+
 \usepackage{polyglossia}
 \setdefaultlanguage{russian} %язык по умолчанию
 \setotherlanguage{english}
 %\addbibresource{bib.bib}
  %\bibliographystyle{unsrt}
 %\usepackage{scrextend} % размер 14pt
+\end{comment}
 
 \usepackage{listings} % Оформление исходного кода
 \lstset{
@@ -88,8 +89,8 @@ url=false %все false выключают отображение полей, з
 
 % Русский язык
 \usepackage{polyglossia}
-\setdefaultlanguage{russian}
-
+\setdefaultlanguage{russian}%язык по умолчанию
+\setotherlanguage{english}
 % Абзацы и списки
 \usepackage{enumerate}   % Тонкая настройка списков
 \usepackage{indentfirst} % Красная строка после заголовка
