--- a/пояснительная записка/1analiz.tex
+++ b/пояснительная записка/1analiz.tex
@@ -17,5 +17,7 @@
 \addimghere{commpa}{1}{Организация структуры на примере диаграммы компонентов}{commpa}
 \addimghere{communication}{1}{Диаграмма коммуникации компонентов}{commu}
 \addimghere{graph}{0.5}{Граф показывающий связь между объектами и передаваемый объем информации}{graph}
+\section{Математическая модель}
+бла бла 
 
 \pagebreak
