--- a/пояснительная записка/preamble.tex
+++ b/пояснительная записка/preamble.tex
@@ -86,7 +86,7 @@ url=false %все false выключают отображение полей, з
 \usepackage{mathtools,unicode-math} % Не совместим с amsmath
 \setmathfont{XITS Math}             % Шрифт для формул: https://github.com/khaledhosny/xits-math
 \numberwithin{equation}{section}    % Формула вида секция.номер
-\usepackage{mathtext} % русские буквы в формулах
+
 % Русский язык
 \usepackage{polyglossia}
 \setdefaultlanguage{russian}%язык по умолчанию
@@ -128,7 +128,7 @@ url=false %все false выключают отображение полей, з
 \parindent 1.5cm % Абзацный отступ
 
 %\sloppy             % Избавляемся от переполнений
-\hyphenpenalty=1000 % Частота переносов
+%\hyphenpenalty=1000 % Частота переносов
 \clubpenalty=10000  % Запрещаем разрыв страницы после первой строки абзаца
 \widowpenalty=10000 % Запрещаем разрыв страницы после последней строки абзаца
 
