--- a/пояснительная записка/referat.tex
+++ b/пояснительная записка/referat.tex
@@ -1,6 +1,6 @@
 \ancontent{РЕФЕРАТ}
-		\begin{center}
-    	Расчетно-пояснительная записка \pageref{LastPage} с.,  рис.,  табл., Х ист., Х прил.
+	\begin{center}
+%    	Расчетно-пояснительная записка \pageref{LastPage} с., \totalfigures\ рис., \totaltables\ табл., Х ист., Х прил.
     	
 		\textbf{<Ключевые слова>}
 	\end{center}
