--- a/пояснительная записка/main.tex
+++ b/пояснительная записка/main.tex
@@ -1,4 +1,5 @@
 \documentclass[a4paper]{article}
+%\usepackage{mathtext} % русские буквы в формулах
 \usepackage[utf8]{inputenc}
 \usepackage{indentfirst}
 
